tests/specs/run/ld_preload/env_arg.ts
const output = new Deno.Command("echo", {
  env: {
    "LD_PRELOAD": "./libpreload.so",
  },
}).spawn();
